--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="title_private_menu">Messages</string>
+    <string name="btn_private_menu_return_des">Return Home</string>
+    <string name="btn_private">Chat</string>
 </resources>
