A filter box for the search results page has been created. The click function of the filter box will be completed later and another version will be updated.

--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_private_menu">Messages</string>
     <string name="btn_private_menu_return_des">Return Home</string>
     <string name="btn_private">Chat</string>
+    <string name="back_button">Back</string>
 </resources>
