The product details page has been initially completed and needs to be improved: it needs to be connected with user data to realize the jump of relevant buttons.

--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="btn_private_menu_return_des">Return Home</string>
     <string name="btn_private">Chat</string>
     <string name="back_button">Back</string>
+    <string name="chat_with_seller">Chat with Seller</string>
+
 </resources>
